# misykat

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: custom_hour.rs  hijri.rs  salah.rs
