[package]
name = "misykat"
version = "4.1.2"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "science"]
edition = "2024"
keywords = ["salah", "pray", "islam", "hijri"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/misykat"
rust-version = "1.87.0"
description = "Islamic library for Rust"

[dependencies]
jiff = "0.2.14"
thiserror = "2.0.12"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
